services/test-app.yaml
---
apiVersion: v1
kind: Service
metadata:
 name: test-app
spec:
 ports:
 - port: 80
   targetPort: 80
 selector:
   app: test-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-app
  name: test-app
spec:
  selector:
    matchLabels:
      app: test-app
  replicas: 5
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - image: strm/helloworld-http
        imagePullPolicy: Always
        name: test-app
