services/ingress.yaml
# An Ingress is the "entrypoint" to services. It is basically Nginx
# that takes incoming connections from clients and directs them to 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rewrite
  annotations:
  # This rewrites the routes incoming to nginx to start at /
  # e.g., hostname.ca/foobar/test => hostname.ca/test
  # This allows us to run multiple services that can be accesible
  # via /vscode, /machinelearning, etc.
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  # We should enable TLS
  # Tailscale can provision TLS certificates for us (sudo tailscale cert)
  # This command writes the cert and key to disk
  # We can then add the cert/key to K8s as a secret
  tls:
    - hosts:
      - desktop-ubuntu.tail6d37c.ts.net
      secretName: tailscale-tls

  # We will only have one host: the full FQDN (from tailscale)
  rules:
  - host: desktop-ubuntu.tail6d37c.ts.net
    http:
      # These paths will be created and removed by the management API
      # Two options: 
      #  - have the management app SSH into the node, then apply via Ansible
      #  - Use a kubernetes API client (preferred)
      paths:
      - pathType: Prefix
        path: "/vscode"
        backend:
          service:
            name: code-server
            port:
              number: 80
      - pathType: Prefix
        path: "/test-app"
        backend:
          service:
            name: test-app
            port:
              number: 80
